# VICCTORIAN

./: .gitignore  README.md  config.toml  pyproject.toml  victorian_os_suite.py
tests/: __init__.py  test_logger.py  test_memory.py  test_model.py
victor/: __init__.py  __main__.py  config.py  logger.py  memory.py  model.py  policy.py  runtime.py
